// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle  Debe mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined "
>
  <span
    className="productDescription undefined"
  >
    Coffe Mug 1
  </span>
</div>
`;

exports[`ProductTitle debe mostrar el componente correctamte con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;
